# ai-ppt-maker

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: README.md
backend/app/api/: README.md  __init__.py  deps.py  router.py
backend/app/config/: settings.py
backend/app/core/: README.md  application.py  logging.py
backend/app/integrations/: README.md  __init__.py  supabase.py
backend/app/models/: integrations.py  presentation.py
backend/app/repositories/: README.md  __init__.py  supabase_read_repository.py  supabase_write_repository.py
backend/app/schemas/: README.md  common.py  content_generation.py  database.py  health.py  payment.py  plan.py  presentation.py  template.py  user.py
backend/app/services/: README.md  __init__.py  auth_service.py  content_generation_service.py  health_service.py  notes_generation_service.py  openai_service.py  payment_service.py  pdf_generation_service.py  plan_service.py  pptx_service.py  presentation_service.py  profile_service.py  supabase_service.py  template_engine.py  template_service.py  topic_generation_service.py
backend/supabase/: README.md
backend/tests/: README.md  conftest.py  test_api_routes.py  test_auth_service.py  test_content_generation_service.py  test_health.py  test_notes_generation_service.py  test_payment_service.py  test_pdf_generation_service.py  test_plan_service.py  test_pptx_service.py  test_supabase_integration.py  test_template_engine.py  test_topic_generation_service.py
docs/: README.md
(+96 files in other folders)
